Fix: Fix email wrap in contact-section

--- a/base/src/scss/sections/_se-contact.scss
+++ b/base/src/scss/sections/_se-contact.scss
@@ -18,6 +18,10 @@
     ul {
       li {
         list-style: none;
+
+        a {
+          word-wrap: anywhere;
+        }
       }
     }
 
